k8s/app/echo-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-echo
spec:
  replicas: 6
  selector:
    matchLabels:
      app: http-echo
  template:
    metadata:
      labels:
        app: http-echo
    spec:
      containers:
        - name: http-echo
          image: mendhak/http-https-echo:latest
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: http-echo
spec:
  type: ClusterIP
  selector:
    app: http-echo
  ports:
    - port: 8080
      targetPort: 8080
