k8s/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-echo
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: websecure
      kind: Gateway
  hostnames:
    - echo.h3rmt.dev
    - test.h3rmt.dev
    - echo-test.h3rmt.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: http-echo
          port: 8080
